Fixxed video clippin

--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,7 @@ button {
 #container {
     display:flex;
     height: 90vh;
+    overflow: hidden;
 }
 
 #contain {
